--- a/content/post/2019-03-19-uscap2019-tweets-2.md
+++ b/content/post/2019-03-19-uscap2019-tweets-2.md
@@ -1,8 +1,8 @@
 ---
-title: USCAP2019 Tweets
+title: USCAP2019 Tweets 2
 author: Serdar Balci
 date: '2019-03-19'
-slug: uscap2019-tweets
+slug: uscap2019-tweets-2
 categories:
   - R
   - tweets
@@ -15,8 +15,15 @@ image:
 
 
 
-
 {{< tweet 877500564405444608 >}}
+
+
+
+
+
+
+
+
 
 
 
