add full hading code

--- a/content/post/2019-05-15-gipath.md
+++ b/content/post/2019-05-15-gipath.md
@@ -3,6 +3,14 @@ title: GIPath Pathology Tweets in USCAP2019
 author: Serdar Balci
 date: '2019-05-15'
 slug: gipath-pathology-tweets-in-uscap2019
+categories:
+  - R
+  - tweets
+  - USCAP
+tags: []
+image:
+  caption: ''
+  focal_point: ''
 ---
 
 
